ent/internal/preparser/grammar.peg.go
package preparser

// Code generated by peg grammar.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleString
	ruleHead
	ruleTail
	ruleWord
	ruleTailPhrase
	ruleTailLastWordJunk
	ruleTailPhrase4
	ruleTailPhrase3
	ruleTailStopWords
	ruleTailPhrase2
	ruleTailPhrase1
	ruleSpaceOrEnd
	ruleCommaSpace
	rule_
	ruleNotLetterOrEnd
	ruleNotLetter
	ruleMultipleSpace
	ruleSingleSpace
	ruleOtherSpace
	ruleEND
	ruleAction0
)

var rul3s = [...]string{
	"Unknown",
	"String",
	"Head",
	"Tail",
	"Word",
	"TailPhrase",
	"TailLastWordJunk",
	"TailPhrase4",
	"TailPhrase3",
	"TailStopWords",
	"TailPhrase2",
	"TailPhrase1",
	"SpaceOrEnd",
	"CommaSpace",
	"_",
	"NotLetterOrEnd",
	"NotLetter",
	"MultipleSpace",
	"SingleSpace",
	"OtherSpace",
	"END",
	"Action0",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type PreParser struct {
	PreString
	Buffer string
	buffer []rune
	rules  [22]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *PreParser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *PreParser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *PreParser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *PreParser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *PreParser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *PreParser) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func (p *PreParser) Execute() {
	buffer, _buffer, text, begin, end := p.Buffer, p.buffer, "", 0, 0
	for _, token := range p.Tokens() {
		switch token.pegRule {

		case ruleAction0:
			p.tailIndex = int(token.begin)

		}
	}
	_, _, _, _, _ = buffer, _buffer, text, begin, end
}

func Pretty(pretty bool) func(*PreParser) error {
	return func(p *PreParser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*PreParser) error {
	return func(p *PreParser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *PreParser) Init(options ...func(*PreParser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 String <- <(_? ((Head Tail?) / (TailPhrase .*)) SpaceOrEnd)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2, tokenIndex2 := position, tokenIndex
					if !_rules[rule_]() {
						goto l2
					}
					goto l3
				l2:
					position, tokenIndex = position2, tokenIndex2
				}
			l3:
				{
					position4, tokenIndex4 := position, tokenIndex
					if !_rules[ruleHead]() {
						goto l5
					}
					{
						position6, tokenIndex6 := position, tokenIndex
						if !_rules[ruleTail]() {
							goto l6
						}
						goto l7
					l6:
						position, tokenIndex = position6, tokenIndex6
					}
				l7:
					goto l4
				l5:
					position, tokenIndex = position4, tokenIndex4
					if !_rules[ruleTailPhrase]() {
						goto l0
					}
				l8:
					{
						position9, tokenIndex9 := position, tokenIndex
						if !matchDot() {
							goto l9
						}
						goto l8
					l9:
						position, tokenIndex = position9, tokenIndex9
					}
				}
			l4:
				if !_rules[ruleSpaceOrEnd]() {
					goto l0
				}
				add(ruleString, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Head <- <(Word (CommaSpace Word)* &(Tail / SpaceOrEnd))> */
		func() bool {
			position10, tokenIndex10 := position, tokenIndex
			{
				position11 := position
				if !_rules[ruleWord]() {
					goto l10
				}
			l12:
				{
					position13, tokenIndex13 := position, tokenIndex
					if !_rules[ruleCommaSpace]() {
						goto l13
					}
					if !_rules[ruleWord]() {
						goto l13
					}
					goto l12
				l13:
					position, tokenIndex = position13, tokenIndex13
				}
				{
					position14, tokenIndex14 := position, tokenIndex
					{
						position15, tokenIndex15 := position, tokenIndex
						if !_rules[ruleTail]() {
							goto l16
						}
						goto l15
					l16:
						position, tokenIndex = position15, tokenIndex15
						if !_rules[ruleSpaceOrEnd]() {
							goto l10
						}
					}
				l15:
					position, tokenIndex = position14, tokenIndex14
				}
				add(ruleHead, position11)
			}
			return true
		l10:
			position, tokenIndex = position10, tokenIndex10
			return false
		},
		/* 2 Tail <- <(Action0 CommaSpace TailPhrase .*)> */
		func() bool {
			position17, tokenIndex17 := position, tokenIndex
			{
				position18 := position
				if !_rules[ruleAction0]() {
					goto l17
				}
				if !_rules[ruleCommaSpace]() {
					goto l17
				}
				if !_rules[ruleTailPhrase]() {
					goto l17
				}
			l19:
				{
					position20, tokenIndex20 := position, tokenIndex
					if !matchDot() {
						goto l20
					}
					goto l19
				l20:
					position, tokenIndex = position20, tokenIndex20
				}
				add(ruleTail, position18)
			}
			return true
		l17:
			position, tokenIndex = position17, tokenIndex17
			return false
		},
		/* 3 Word <- <((!TailPhrase (!(',' / ' ') .)+) / ',')> */
		func() bool {
			position21, tokenIndex21 := position, tokenIndex
			{
				position22 := position
				{
					position23, tokenIndex23 := position, tokenIndex
					{
						position25, tokenIndex25 := position, tokenIndex
						if !_rules[ruleTailPhrase]() {
							goto l25
						}
						goto l24
					l25:
						position, tokenIndex = position25, tokenIndex25
					}
					{
						position28, tokenIndex28 := position, tokenIndex
						{
							position29, tokenIndex29 := position, tokenIndex
							if buffer[position] != rune(',') {
								goto l30
							}
							position++
							goto l29
						l30:
							position, tokenIndex = position29, tokenIndex29
							if buffer[position] != rune(' ') {
								goto l28
							}
							position++
						}
					l29:
						goto l24
					l28:
						position, tokenIndex = position28, tokenIndex28
					}
					if !matchDot() {
						goto l24
					}
				l26:
					{
						position27, tokenIndex27 := position, tokenIndex
						{
							position31, tokenIndex31 := position, tokenIndex
							{
								position32, tokenIndex32 := position, tokenIndex
								if buffer[position] != rune(',') {
									goto l33
								}
								position++
								goto l32
							l33:
								position, tokenIndex = position32, tokenIndex32
								if buffer[position] != rune(' ') {
									goto l31
								}
								position++
							}
						l32:
							goto l27
						l31:
							position, tokenIndex = position31, tokenIndex31
						}
						if !matchDot() {
							goto l27
						}
						goto l26
					l27:
						position, tokenIndex = position27, tokenIndex27
					}
					goto l23
				l24:
					position, tokenIndex = position23, tokenIndex23
					if buffer[position] != rune(',') {
						goto l21
					}
					position++
				}
			l23:
				add(ruleWord, position22)
			}
			return true
		l21:
			position, tokenIndex = position21, tokenIndex21
			return false
		},
		/* 4 TailPhrase <- <(TailLastWordJunk / TailPhrase4 / TailPhrase3 / TailStopWords / TailPhrase2 / TailPhrase1)> */
		func() bool {
			position34, tokenIndex34 := position, tokenIndex
			{
				position35 := position
				{
					position36, tokenIndex36 := position, tokenIndex
					if !_rules[ruleTailLastWordJunk]() {
						goto l37
					}
					goto l36
				l37:
					position, tokenIndex = position36, tokenIndex36
					if !_rules[ruleTailPhrase4]() {
						goto l38
					}
					goto l36
				l38:
					position, tokenIndex = position36, tokenIndex36
					if !_rules[ruleTailPhrase3]() {
						goto l39
					}
					goto l36
				l39:
					position, tokenIndex = position36, tokenIndex36
					if !_rules[ruleTailStopWords]() {
						goto l40
					}
					goto l36
				l40:
					position, tokenIndex = position36, tokenIndex36
					if !_rules[ruleTailPhrase2]() {
						goto l41
					}
					goto l36
				l41:
					position, tokenIndex = position36, tokenIndex36
					if !_rules[ruleTailPhrase1]() {
						goto l34
					}
				}
			l36:
				add(ruleTailPhrase, position35)
			}
			return true
		l34:
			position, tokenIndex = position34, tokenIndex34
			return false
		},
		/* 5 TailLastWordJunk <- <(((((('v' / 'V') ('a' / 'A') ('r' / 'R')) / (('i' / 'I') ('n' / 'N') ('e' / 'E') ('d' / 'D')) / (('s' / 'S') ('s' / 'S') ('p' / 'P')) / (('s' / 'S') ('u' / 'U') ('b' / 'B') ('s' / 'S') ('p' / 'P')) / (('s' / 'S') ('u' / 'U') ('b' / 'B') ('g' / 'G') ('e' / 'E') ('n' / 'N'))) '.'?) / (('s' / 'S') ('e' / 'E') ('n' / 'N') ('s' / 'S') ('u' / 'U')) / (('n' / 'N') ('e' / 'E') ('w' / 'W')) / (('n' / 'N') ('o' / 'O') ('n' / 'N')) / (('n' / 'N') ('e' / 'E') ('c' / 'C')) / (('h' / 'H') ('y' / 'Y') ('b' / 'B') ('r' / 'R') ('i' / 'I') ('d' / 'D')) / (('v' / 'V') ('o' / 'O') ('n' / 'N')) / ('P' '.' _? ('P' '.')) / (('m' / 'M') ('s' / 'S'))) '?'? &SpaceOrEnd)> */
		func() bool {
			position42, tokenIndex42 := position, tokenIndex
			{
				position43 := position
				{
					position44, tokenIndex44 := position, tokenIndex
					{
						position46, tokenIndex46 := position, tokenIndex
						{
							position48, tokenIndex48 := position, tokenIndex
							if buffer[position] != rune('v') {
								goto l49
							}
							position++
							goto l48
						l49:
							position, tokenIndex = position48, tokenIndex48
							if buffer[position] != rune('V') {
								goto l47
							}
							position++
						}
					l48:
						{
							position50, tokenIndex50 := position, tokenIndex
							if buffer[position] != rune('a') {
								goto l51
							}
							position++
							goto l50
						l51:
							position, tokenIndex = position50, tokenIndex50
							if buffer[position] != rune('A') {
								goto l47
							}
							position++
						}
					l50:
						{
							position52, tokenIndex52 := position, tokenIndex
							if buffer[position] != rune('r') {
								goto l53
							}
							position++
							goto l52
						l53:
							position, tokenIndex = position52, tokenIndex52
							if buffer[position] != rune('R') {
								goto l47
							}
							position++
						}
					l52:
						goto l46
					l47:
						position, tokenIndex = position46, tokenIndex46
						{
							position55, tokenIndex55 := position, tokenIndex
							if buffer[position] != rune('i') {
								goto l56
							}
							position++
							goto l55
						l56:
							position, tokenIndex = position55, tokenIndex55
							if buffer[position] != rune('I') {
								goto l54
							}
							position++
						}
					l55:
						{
							position57, tokenIndex57 := position, tokenIndex
							if buffer[position] != rune('n') {
								goto l58
							}
							position++
							goto l57
						l58:
							position, tokenIndex = position57, tokenIndex57
							if buffer[position] != rune('N') {
								goto l54
							}
							position++
						}
					l57:
						{
							position59, tokenIndex59 := position, tokenIndex
							if buffer[position] != rune('e') {
								goto l60
							}
							position++
							goto l59
						l60:
							position, tokenIndex = position59, tokenIndex59
							if buffer[position] != rune('E') {
								goto l54
							}
							position++
						}
					l59:
						{
							position61, tokenIndex61 := position, tokenIndex
							if buffer[position] != rune('d') {
								goto l62
							}
							position++
							goto l61
						l62:
							position, tokenIndex = position61, tokenIndex61
							if buffer[position] != rune('D') {
								goto l54
							}
							position++
						}
					l61:
						goto l46
					l54:
						position, tokenIndex = position46, tokenIndex46
						{
							position64, tokenIndex64 := position, tokenIndex
							if buffer[position] != rune('s') {
								goto l65
							}
							position++
							goto l64
						l65:
							position, tokenIndex = position64, tokenIndex64
							if buffer[position] != rune('S') {
								goto l63
							}
							position++
						}
					l64:
						{
							position66, tokenIndex66 := position, tokenIndex
							if buffer[position] != rune('s') {
								goto l67
							}
							position++
							goto l66
						l67:
							position, tokenIndex = position66, tokenIndex66
							if buffer[position] != rune('S') {
								goto l63
							}
							position++
						}
					l66:
						{
							position68, tokenIndex68 := position, tokenIndex
							if buffer[position] != rune('p') {
								goto l69
							}
							position++
							goto l68
						l69:
							position, tokenIndex = position68, tokenIndex68
							if buffer[position] != rune('P') {
								goto l63
							}
							position++
						}
					l68:
						goto l46
					l63:
						position, tokenIndex = position46, tokenIndex46
						{
							position71, tokenIndex71 := position, tokenIndex
							if buffer[position] != rune('s') {
								goto l72
							}
							position++
							goto l71
						l72:
							position, tokenIndex = position71, tokenIndex71
							if buffer[position] != rune('S') {
								goto l70
							}
							position++
						}
					l71:
						{
							position73, tokenIndex73 := position, tokenIndex
							if buffer[position] != rune('u') {
								goto l74
							}
							position++
							goto l73
						l74:
							position, tokenIndex = position73, tokenIndex73
							if buffer[position] != rune('U') {
								goto l70
							}
							position++
						}
					l73:
						{
							position75, tokenIndex75 := position, tokenIndex
							if buffer[position] != rune('b') {
								goto l76
							}
							position++
							goto l75
						l76:
							position, tokenIndex = position75, tokenIndex75
							if buffer[position] != rune('B') {
								goto l70
							}
							position++
						}
					l75:
						{
							position77, tokenIndex77 := position, tokenIndex
							if buffer[position] != rune('s') {
								goto l78
							}
							position++
							goto l77
						l78:
							position, tokenIndex = position77, tokenIndex77
							if buffer[position] != rune('S') {
								goto l70
							}
							position++
						}
					l77:
						{
							position79, tokenIndex79 := position, tokenIndex
							if buffer[position] != rune('p') {
								goto l80
							}
							position++
							goto l79
						l80:
							position, tokenIndex = position79, tokenIndex79
							if buffer[position] != rune('P') {
								goto l70
							}
							position++
						}
					l79:
						goto l46
					l70:
						position, tokenIndex = position46, tokenIndex46
						{
							position81, tokenIndex81 := position, tokenIndex
							if buffer[position] != rune('s') {
								goto l82
							}
							position++
							goto l81
						l82:
							position, tokenIndex = position81, tokenIndex81
							if buffer[position] != rune('S') {
								goto l45
							}
							position++
						}
					l81:
						{
							position83, tokenIndex83 := position, tokenIndex
							if buffer[position] != rune('u') {
								goto l84
							}
							position++
							goto l83
						l84:
							position, tokenIndex = position83, tokenIndex83
							if buffer[position] != rune('U') {
								goto l45
							}
							position++
						}
					l83:
						{
							position85, tokenIndex85 := position, tokenIndex
							if buffer[position] != rune('b') {
								goto l86
							}
							position++
							goto l85
						l86:
							position, tokenIndex = position85, tokenIndex85
							if buffer[position] != rune('B') {
								goto l45
							}
							position++
						}
					l85:
						{
							position87, tokenIndex87 := position, tokenIndex
							if buffer[position] != rune('g') {
								goto l88
							}
							position++
							goto l87
						l88:
							position, tokenIndex = position87, tokenIndex87
							if buffer[position] != rune('G') {
								goto l45
							}
							position++
						}
					l87:
						{
							position89, tokenIndex89 := position, tokenIndex
							if buffer[position] != rune('e') {
								goto l90
							}
							position++
							goto l89
						l90:
							position, tokenIndex = position89, tokenIndex89
							if buffer[position] != rune('E') {
								goto l45
							}
							position++
						}
					l89:
						{
							position91, tokenIndex91 := position, tokenIndex
							if buffer[position] != rune('n') {
								goto l92
							}
							position++
							goto l91
						l92:
							position, tokenIndex = position91, tokenIndex91
							if buffer[position] != rune('N') {
								goto l45
							}
							position++
						}
					l91:
					}
				l46:
					{
						position93, tokenIndex93 := position, tokenIndex
						if buffer[position] != rune('.') {
							goto l93
						}
						position++
						goto l94
					l93:
						position, tokenIndex = position93, tokenIndex93
					}
				l94:
					goto l44
				l45:
					position, tokenIndex = position44, tokenIndex44
					{
						position96, tokenIndex96 := position, tokenIndex
						if buffer[position] != rune('s') {
							goto l97
						}
						position++
						goto l96
					l97:
						position, tokenIndex = position96, tokenIndex96
						if buffer[position] != rune('S') {
							goto l95
						}
						position++
					}
				l96:
					{
						position98, tokenIndex98 := position, tokenIndex
						if buffer[position] != rune('e') {
							goto l99
						}
						position++
						goto l98
					l99:
						position, tokenIndex = position98, tokenIndex98
						if buffer[position] != rune('E') {
							goto l95
						}
						position++
					}
				l98:
					{
						position100, tokenIndex100 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l101
						}
						position++
						goto l100
					l101:
						position, tokenIndex = position100, tokenIndex100
						if buffer[position] != rune('N') {
							goto l95
						}
						position++
					}
				l100:
					{
						position102, tokenIndex102 := position, tokenIndex
						if buffer[position] != rune('s') {
							goto l103
						}
						position++
						goto l102
					l103:
						position, tokenIndex = position102, tokenIndex102
						if buffer[position] != rune('S') {
							goto l95
						}
						position++
					}
				l102:
					{
						position104, tokenIndex104 := position, tokenIndex
						if buffer[position] != rune('u') {
							goto l105
						}
						position++
						goto l104
					l105:
						position, tokenIndex = position104, tokenIndex104
						if buffer[position] != rune('U') {
							goto l95
						}
						position++
					}
				l104:
					goto l44
				l95:
					position, tokenIndex = position44, tokenIndex44
					{
						position107, tokenIndex107 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l108
						}
						position++
						goto l107
					l108:
						position, tokenIndex = position107, tokenIndex107
						if buffer[position] != rune('N') {
							goto l106
						}
						position++
					}
				l107:
					{
						position109, tokenIndex109 := position, tokenIndex
						if buffer[position] != rune('e') {
							goto l110
						}
						position++
						goto l109
					l110:
						position, tokenIndex = position109, tokenIndex109
						if buffer[position] != rune('E') {
							goto l106
						}
						position++
					}
				l109:
					{
						position111, tokenIndex111 := position, tokenIndex
						if buffer[position] != rune('w') {
							goto l112
						}
						position++
						goto l111
					l112:
						position, tokenIndex = position111, tokenIndex111
						if buffer[position] != rune('W') {
							goto l106
						}
						position++
					}
				l111:
					goto l44
				l106:
					position, tokenIndex = position44, tokenIndex44
					{
						position114, tokenIndex114 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l115
						}
						position++
						goto l114
					l115:
						position, tokenIndex = position114, tokenIndex114
						if buffer[position] != rune('N') {
							goto l113
						}
						position++
					}
				l114:
					{
						position116, tokenIndex116 := position, tokenIndex
						if buffer[position] != rune('o') {
							goto l117
						}
						position++
						goto l116
					l117:
						position, tokenIndex = position116, tokenIndex116
						if buffer[position] != rune('O') {
							goto l113
						}
						position++
					}
				l116:
					{
						position118, tokenIndex118 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l119
						}
						position++
						goto l118
					l119:
						position, tokenIndex = position118, tokenIndex118
						if buffer[position] != rune('N') {
							goto l113
						}
						position++
					}
				l118:
					goto l44
				l113:
					position, tokenIndex = position44, tokenIndex44
					{
						position121, tokenIndex121 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l122
						}
						position++
						goto l121
					l122:
						position, tokenIndex = position121, tokenIndex121
						if buffer[position] != rune('N') {
							goto l120
						}
						position++
					}
				l121:
					{
						position123, tokenIndex123 := position, tokenIndex
						if buffer[position] != rune('e') {
							goto l124
						}
						position++
						goto l123
					l124:
						position, tokenIndex = position123, tokenIndex123
						if buffer[position] != rune('E') {
							goto l120
						}
						position++
					}
				l123:
					{
						position125, tokenIndex125 := position, tokenIndex
						if buffer[position] != rune('c') {
							goto l126
						}
						position++
						goto l125
					l126:
						position, tokenIndex = position125, tokenIndex125
						if buffer[position] != rune('C') {
							goto l120
						}
						position++
					}
				l125:
					goto l44
				l120:
					position, tokenIndex = position44, tokenIndex44
					{
						position128, tokenIndex128 := position, tokenIndex
						if buffer[position] != rune('h') {
							goto l129
						}
						position++
						goto l128
					l129:
						position, tokenIndex = position128, tokenIndex128
						if buffer[position] != rune('H') {
							goto l127
						}
						position++
					}
				l128:
					{
						position130, tokenIndex130 := position, tokenIndex
						if buffer[position] != rune('y') {
							goto l131
						}
						position++
						goto l130
					l131:
						position, tokenIndex = position130, tokenIndex130
						if buffer[position] != rune('Y') {
							goto l127
						}
						position++
					}
				l130:
					{
						position132, tokenIndex132 := position, tokenIndex
						if buffer[position] != rune('b') {
							goto l133
						}
						position++
						goto l132
					l133:
						position, tokenIndex = position132, tokenIndex132
						if buffer[position] != rune('B') {
							goto l127
						}
						position++
					}
				l132:
					{
						position134, tokenIndex134 := position, tokenIndex
						if buffer[position] != rune('r') {
							goto l135
						}
						position++
						goto l134
					l135:
						position, tokenIndex = position134, tokenIndex134
						if buffer[position] != rune('R') {
							goto l127
						}
						position++
					}
				l134:
					{
						position136, tokenIndex136 := position, tokenIndex
						if buffer[position] != rune('i') {
							goto l137
						}
						position++
						goto l136
					l137:
						position, tokenIndex = position136, tokenIndex136
						if buffer[position] != rune('I') {
							goto l127
						}
						position++
					}
				l136:
					{
						position138, tokenIndex138 := position, tokenIndex
						if buffer[position] != rune('d') {
							goto l139
						}
						position++
						goto l138
					l139:
						position, tokenIndex = position138, tokenIndex138
						if buffer[position] != rune('D') {
							goto l127
						}
						position++
					}
				l138:
					goto l44
				l127:
					position, tokenIndex = position44, tokenIndex44
					{
						position141, tokenIndex141 := position, tokenIndex
						if buffer[position] != rune('v') {
							goto l142
						}
						position++
						goto l141
					l142:
						position, tokenIndex = position141, tokenIndex141
						if buffer[position] != rune('V') {
							goto l140
						}
						position++
					}
				l141:
					{
						position143, tokenIndex143 := position, tokenIndex
						if buffer[position] != rune('o') {
							goto l144
						}
						position++
						goto l143
					l144:
						position, tokenIndex = position143, tokenIndex143
						if buffer[position] != rune('O') {
							goto l140
						}
						position++
					}
				l143:
					{
						position145, tokenIndex145 := position, tokenIndex
						if buffer[position] != rune('n') {
							goto l146
						}
						position++
						goto l145
					l146:
						position, tokenIndex = position145, tokenIndex145
						if buffer[position] != rune('N') {
							goto l140
						}
						position++
					}
				l145:
					goto l44
				l140:
					position, tokenIndex = position44, tokenIndex44
					if buffer[position] != rune('P') {
						goto l147
					}
					position++
					if buffer[position] != rune('.') {
						goto l147
					}
					position++
					{
						position148, tokenIndex148 := position, tokenIndex
						if !_rules[rule_]() {
							goto l148
						}
						goto l149
					l148:
						position, tokenIndex = position148, tokenIndex148
					}
				l149:
					if buffer[position] != rune('P') {
						goto l147
					}
					position++
					if buffer[position] != rune('.') {
						goto l147
					}
					position++
					goto l44
				l147:
					position, tokenIndex = position44, tokenIndex44
					{
						position150, tokenIndex150 := position, tokenIndex
						if buffer[position] != rune('m') {
							goto l151
						}
						position++
						goto l150
					l151:
						position, tokenIndex = position150, tokenIndex150
						if buffer[position] != rune('M') {
							goto l42
						}
						position++
					}
				l150:
					{
						position152, tokenIndex152 := position, tokenIndex
						if buffer[position] != rune('s') {
							goto l153
						}
						position++
						goto l152
					l153:
						position, tokenIndex = position152, tokenIndex152
						if buffer[position] != rune('S') {
							goto l42
						}
						position++
					}
				l152:
				}
			l44:
				{
					position154, tokenIndex154 := position, tokenIndex
					if buffer[position] != rune('?') {
						goto l154
					}
					position++
					goto l155
				l154:
					position, tokenIndex = position154, tokenIndex154
				}
			l155:
				{
					position156, tokenIndex156 := position, tokenIndex
					if !_rules[ruleSpaceOrEnd]() {
						goto l42
					}
					position, tokenIndex = position156, tokenIndex156
				}
				add(ruleTailLastWordJunk, position43)
			}
			return true
		l42:
			position, tokenIndex = position42, tokenIndex42
			return false
		},
		/* 6 TailPhrase4 <- <((((('p' / 'P') ('r' / 'R') ('o' / 'O') _ (('p' / 'P') ('a' / 'A') ('r' / 'R') ('t' / 'T') ('e' / 'E'))) / (('n' / 'N') ('o' / 'O') ('m' / 'M') ('e' / 'E') ('n' / 'N'))) &NotLetterOrEnd) / ('p' '.' _? ('p' '.')) / (('n' / 'N') ('o' / 'O') ('m' / 'M') '.') / (('c' / 'C') ('o' / 'O') ('m' / 'M') ('b' / 'B') '.'))> */
		func() bool {
			position157, tokenIndex157 := position, tokenIndex
			{
				position158 := position
				{
					position159, tokenIndex159 := position, tokenIndex
					{
						position161, tokenIndex161 := position, tokenIndex
						{
							position163, tokenIndex163 := position, tokenIndex
							if buffer[position] != rune('p') {
								goto l164
							}
							position++
							goto l163
						l164:
							position, tokenIndex = position163, tokenIndex163
							if buffer[position] != rune('P') {
								goto l162
							}
							position++
						}
					l163:
						{
							position165, tokenIndex165 := position, tokenIndex
							if buffer[position] != rune('r') {
								goto l166
							}
							position++
							goto l165
						l166:
							position, tokenIndex = position165, tokenIndex165
							if buffer[position] != rune('R') {
								goto l162
							}
							position++
						}
